Disable additional SpotBugs rules (#3982)